src/objects/Seller__c.object
<CustomObject>
    <fields>
        <fullName>Apt_No__c</fullName>
        <label>Apt. No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name__c</fullName>
        <label>Bank Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_mail__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>E-mail</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NIP__c</fullName>
        <label>NIP</label>
        <length>13</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal Code</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SWIFT__c</fullName>
        <label>SWIFT</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_No__c</fullName>
        <label>Street No</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Seller</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Company_Name__c</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>NIP__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SEL-{00000}</displayFormat>
        <label>Seller Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sellers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>BankAccountRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Bank_Account_Number__c , $CustomMetadata.Validation_Setting__mdt.Bank_Account.Value__c ))</errorConditionFormula>
        <errorMessage>Please provide 26 digits of your bank account number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NIPRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(NIP__c, $CustomMetadata.Validation_Setting__mdt.NIP.Value__c ))</errorConditionFormula>
        <errorMessage>Please provide NIP value in format XXX-XXX-XX-XX</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PhoneRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Phone__c , $CustomMetadata.Validation_Setting__mdt.Phone.Value__c ))</errorConditionFormula>
        <errorMessage>Please provide only digits</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PostalCodeRule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( Postal_Code__c ,$CustomMetadata.Validation_Setting__mdt.Postal_Code.Value__c ))</errorConditionFormula>
        <errorMessage>Please provide valid Postal Code (format XX-XXX)</errorMessage>
    </validationRules>
</CustomObject>